# netclaw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  N2N-PEERING-NETCLAWS.md  README.md  SOUL-EXPERTISE.md  SOUL-SKILLS.md  SOUL.md  TOOLS-REFERENCE.md  TOOLS.md  docker-compose.mcp.yml
benchmarks/: gcf_graph_benchmark.py
config/: openclaw.json  openclaw.json.bak  openclaw.json.twitter-mcp-example  twilio-voice.json.example
docs/: FORWARD.md  IPFABRIC.md  N2N-FEDERATION-GUIDE.md  N2N-RISK-MIGRATION-FOR-PEERS.md  N2N-RISK.md  SOUL-DEFENSE.md
mcp-servers/: README.md
mcp-servers/memory-mcp/: README.md  memory_mcp_server.py  pyproject.toml
mcp-servers/memory-mcp/embeddings/: __init__.py  embedder.py
mcp-servers/memory-mcp/storage/: __init__.py  chroma_store.py  schema.sql  sqlite_store.py
mcp-servers/rag-mcp/: README.md  config.py  pyproject.toml  rag_mcp_server.py  scrubber.py
mcp-servers/rag-mcp/embeddings/: embedder.py
mcp-servers/rag-mcp/ingestion/: chunker.py  parsers.py  url_fetcher.py
mcp-servers/rag-mcp/retrieval/: hybrid.py  reranker.py
mcp-servers/rag-mcp/storage/: bm25_store.py  chroma_store.py  registry.py
scripts/: chrome-devtools-enable.sh  forward-enable.sh  in2n-border-workspace.py  in2n-member-home.py  in2n-member.py  in2n-migrate.py  in2n-profiles.py  in2n-services.py  install.sh  ipfabric-enable.sh  mcp-call.py  mcp-installer.py  memory-enable.sh  netclaw  patch-claw-certs.sh  peering-setup.sh  register-mcps-with-defenseclaw.py  setup.sh  setup_gui.py  twilio_install.sh  twitter_install.sh  twitter_oauth2_setup.py  verify-catalog-coverage.py  verify-inventory-counts.py
testbed/: testbed.yaml
ui/: index.html
(+535 files in other folders)
