[project]
name = "netclaw-memory-mcp"
version = "0.1.0"
description = "Hybrid Memory MCP Server for NetClaw - persistent context across sessions with structured facts, semantic search, and entity relationships"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp",
    "fastmcp",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.scripts]
memory-mcp-server = "memory_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
